chore: remove --add-modules/--add-reads for org.slf4j and ch.qos.logback.classic